# tsusiat

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tsusiat/: cli.py
src/tsusiat/planning/: task.py
src/tsusiat/project/: task.py  workstream.py
src/tsusiat/utils/: cli_extras.py
tests/: test_cli.py  test_project_planning_example.py  test_workstream.py
tests/fixtures/: large_project.py
