[project]
name = "tsusiat"
version = "0.0.0"
description = "Waterfall-style project management, split in two by a rock."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "typer>=0.21.0",
]

[project.scripts]
tsusiat = "tsusiat.cli:app"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsusiat"]

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8.0",
  "pytest-cov>=7.0",
  "ruff>=0.14",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
